# PyQtWeb

./: .flake8  .gitignore  README.md  environment.yml  main.py  pyproject.toml
PyQtWeb/: MainView.py  app.py
