[project]
name = "pyqtweb"
version = "0.0.0"
description = "Demo pyqt webview application with bci-essentials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"bci-essentials",
	"pyqt6",
	"pyqt6-webengine",
]

[tool.setuptools.packages.find]
exclude = [
	"examples*",
	"docs*"
]

[tool.black]
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
	\.git
	| \.hg
	| \.mypy_cache
	| \.tox
	| \.venv
	| _build
	| buck-out
	| build
	| dist

	# The following are specific to Black, you probably don't want those.
	| blib2to3
	| tests/data
)/
'''
